# docs/swagger.json
@@ -1452,8 +1452,7 @@
             "required": [
                 "commentText",
                 "objId",
-                "type",
-                "userId"
+                "type"
             ],
             "properties": {
                 "commentText": {
@@ -1468,6 +1467,9 @@
                 "parentCommentId": {
                     "type": "integer"
                 },
+                "replyInfoId": {
+                    "type": "integer"
+                },
                 "replyUserId": {
                     "type": "integer"
                 },
@@ -1475,9 +1477,6 @@
                     "description": "评论类型 1 文章 2沸点",
                     "type": "string",
                     "example": "1"
-                },
-                "userId": {
-                    "type": "integer"
                 }
             }
         },
